# sherlock

./: .env.example  .gitignore  AGENTS_AND_LOOP.md  EVALUATION_PROTOCOL.md  INTENT_DEVIATIONS.md  Makefile  OPERATIONS.md  README.ko.md  README.md  README_PACKAGE.md  SPEC.md  TEST_SCENARIOS_v112.md  bootstrap.sh  pyproject.toml  sherlock.example.yaml  sherlock.fake.yaml  sherlock.live.yaml  sherlock.opus.yaml  test_sherlock.py  tokyo_trip_reference.md
.github/workflows/: ci.yml  publish.yml
docs/: EVENTS.md  ROADMAP.md  SPEC_INDEX.md
evaluation/: ab_benchmark.py  ab_memory_benchmark.py  ab_memory_report.md  ab_report.md  coldstart_ab.py  coldstart_codex_ab.py  deep_research_ab.py  dummy_conversation.md  evaluator_system_prompt.txt  evidence_grounding_ab.py  full_eval_v14.py  gold_standard.md  inference_notebook_ab.py  memory_consistency_ab.py  perception_ab.py  probe_eval.py  ralph_v2.py  reasoning_judge_ab.py  rerun_t2_eviction.py  subagent_evaluator_prompt.md  verify_deferral_fix.py
evaluation/probes/: README.md  cross_verification_disagreeing_sources.yaml  cross_verification_epipen_correction.yaml  cross_verification_kidzania_age.yaml  grounding_no_fabrication.yaml  implicit_ask_panic_permission.yaml  implicit_ask_reassurance.yaml  implicit_ask_should_i_buy.yaml  memory_recall_framework_correction.yaml  memory_recall_open_list.yaml  memory_recall_yujin_allergy.yaml  memory_recall_yujin_gender_correction.yaml  memory_reconsolidation_correction.yaml  memory_reconsolidation_frontier_recall.yaml  memory_reconsolidation_korean_recall.yaml  memory_reconsolidation_superseded.yaml  memory_reconsolidation_temporal.yaml  pin_discipline_anchor_facts.yaml  pin_discipline_no_overpin.yaml  pin_discipline_safety_critical.yaml  provenance_inferred_location.yaml  provenance_t76_name_probe.yaml  provenance_unstated_fact_admission.yaml  tier1_always_on_persona_summary.yaml  tier1_always_on_pinned_in_slot.yaml  tier1_always_on_register.yaml  tool_discipline_fresh_price.yaml  tool_discipline_no_tool_chitchat.yaml  tool_discipline_ticket_availability.yaml  topic_shift_anyway_pivot.yaml  topic_shift_nvm_skip.yaml  topic_shift_tangent_marker.yaml
logs/: AWAITING_PHASE1_APPROVAL.md  CHECKPOINT.md  REPORT.html  REPORT.md  curated.md
playground/: README.md  __init__.py  providers.py  server.py  session.py
playground/static/: app.js  index.html
prompts/: main_system_prompt.md
sherlock/: __init__.py  agent.py  budget.py  compress.py  config.py  jsonish.py  viz.py
sherlock/bootstrap/: __init__.py  engine.py  meta_context.py
sherlock/cli/: __init__.py  main.py
sherlock/evaluation/: __init__.py  evaluator.py  output_format.py  replay.py
sherlock/evolution/: __init__.py  versioning.py
sherlock/inference/: __init__.py  engine.py
sherlock/memory/: __init__.py  decay.py  embeddings.py  entry.py  k_turn.py  portability.py  store.py  summarizer.py
sherlock/perception/: __init__.py  core.py  render.py
sherlock/providers/: __init__.py  base.py  callable_provider.py  fake.py  litellm_provider.py  wrapper_provider.py
sherlock/rag/: __init__.py  hybrid.py
sherlock/security/: __init__.py  redaction.py  urlguard.py
sherlock/storage/: __init__.py  db.py
sherlock/tools/: __init__.py  builtin.py  memory_tool.py  web_search.py
tests/: conftest.py
tests/integration/: test_audit_fixes.py  test_background_v050.py  test_cache_reorder_v14.py  test_compaction_frontier_v10.py  test_core_fixes_v09.py  test_core_loop_v050.py  test_deep_research_coverage_v13.py  test_deep_research_raw_recovery_v14.py  test_deep_research_v07.py  test_deferral_fix_v12.py  test_dr_audit_fixes_v111.py  test_dr_autonomy_v110.py  test_dr_consistency_v110.py  test_dr_faithfulness_v110.py  test_dr_freshness_v110.py  test_dr_image_trigger_v110.py  test_dr_language_consistency_v111.py  test_dr_observability_v111.py  test_dr_parallel_search_v111.py  test_dr_persist_raw_v110.py  test_dr_structured_v110.py  test_dr_web_recheck_v110.py  test_eval_and_migration_v050.py  test_intent_chain_v12.py  test_ltm_injection_v112.py  test_ltm_nl_management_v112.py  test_ltm_portability_agent_v112.py  test_ltm_promotion_v112.py  test_m1_chat.py  test_memory_wiring_v10.py  test_p10_core_v11.py  test_persona_summary.py  test_playground_ab_export_v12.py  test_playground_background_toggle_v18.py  test_playground_deep_research_v07.py  test_playground_history_h1_v112.py  test_playground_ltm_v112.py  test_playground_verify_toggle_v111.py  test_playground_viz_toggle_v112.py  test_research_strategy_v10.py  (+11 more)
tests/unit/: test_async_default_v18.py  test_budget.py  test_budget_profiles_v10.py  test_companions_gate_v16.py  test_compress_v11.py  test_conditional_extension_v10.py  test_config.py  test_efficiency_v050.py  test_embeddings_v050.py  test_engine_v11.py  test_entity_index.py  test_evidence_grounding_v15.py  test_freshness_loop_guard.py  test_grounding_v11.py  test_inference_notebook_v15.py  test_json_retry_v10.py  test_ltm_confirm_token_v112.py  test_ltm_portability_v112.py  test_ltm_summarizer_v112.py  test_memory_consistency_v15.py  test_memory_fixes_v09.py  test_memory_tool.py  test_memory_v11.py  test_oss_providers.py  test_perception_v15.py  test_playground_viz_host_sizing_v112.py  test_prompt_caching_v10.py  test_providers.py  test_query_clean_v08.py  test_reconsolidation_v10.py  test_search_engines.py  test_security_v050.py  test_stop_and_nudge.py  test_storage.py  test_streaming.py  test_tool_callables.py  test_version_consistency.py  test_viz_content_v2_v112.py  test_viz_image_security_v112.py  test_viz_image_v3_v112.py  (+3 more)
