[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sherlock"
version = "0.0.0"
description = "Domain-agnostic context-curation library — main LLM authors its companions, memory fades naturally, intent is inferred."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Minwoo Kim" }]
# Dependencies grow milestone by milestone (see SPEC.md § 9).
# M1: provider abstraction (litellm), config (pydantic+yaml), storage (sqlmodel), CLI (typer), logging (structlog).
# M2 adds: chromadb, sentence-transformers, rank-bm25.
dependencies = [
    "litellm>=1.50",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "sqlmodel>=0.0.22",
    "typer>=0.12",
    "structlog>=24.1",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "black>=24",
]

[project.scripts]
sherlock = "sherlock.cli.main:main"

[tool.setuptools.packages.find]
include = ["sherlock*"]
exclude = ["tests*", "evaluation*", "logs*", "state*", "prompts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
